<resources>
    <!--    general strings-->
    <string name="app_name">StudyCards</string>
    <string name="delete_tip">Tip💡: Long press an item to delete</string>

    <!--    Main activity-->
    <string name="welcome_text">Welcome to StudyCards, your trusted companion for achieving success</string>
    <string name="create_deck">Create new deck</string>
    <string name="view_deck">View decks</string>

    <!--    CreateDeck activity-->
    <string name="deck_name">Enter title of deck</string>
    <string name="card_question">Enter question</string>
    <string name="card_answer">Enter answer</string>
    <string name="button_question">Question</string>
    <string name="button_answer">Answer</string>
    <string name="create_card">Create card</string>
    <string name="submit_deck">Submit deck</string>
    <string name="snackbar_create_card">Card has been created</string>
    <string name="snackbar_create_card_error">Kindly enter both question and answer details to add card</string>
    <string name="snackbar_add_deck">Deck has been submitted</string>
    <string name="snackbar_add_deck_error">Create at least one card and set a deck title to submit current deck</string>

    <!--    ViewDecks activity-->
    <plurals name="view_decks_title">
        <item quantity="one">Showing %d deck</item>
        <item quantity="other">Showing %d decks</item>
    </plurals>
    <plurals name="card_number">
        <item quantity="one">%d card</item>
        <item quantity="other">%d cards</item>
    </plurals>

<!--    AddCard activity-->
    <string name="add_card_title">Add a new card to deck</string>
    <string name="add_card_btn">Add card</string>
    <string name="snackbar_add_card">Card has been added</string>

    <!--    Card activity-->
    <string name="question">QUESTION</string>
    <string name="answer">ANSWER</string>
    <string name="reveal_answer">Reveal answer</string>
    <string name="hide_answer">Hide answer</string>

<!--    DeleteDialog -->
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete the selected item</string>
    <string name="delete_dialog_positive">Yes</string>
    <string name="delete_dialog_negative">No</string>
    
<!--    Study mode notification -->
    <string name="content_title">Study mode</string>
    <string name="content_text">Hello there, here is study mode reminding you to make sure you study daily </string>
    <string name="study_dialog_description">Initiate study mode to receive daily notifications reminding you to study. Click on start to enter study mode and stop to end study mode</string>
    <string name="study_dialog_positive">Start</string>
    <string name="study_dialog_negative">Stop</string>
    <string name="study_dialog_dismiss">Dismiss</string>
    <string name="study_snackbar_start">Study mode has been initiated</string>
    <string name="study_snackbar_cancel">Study mode has been cancelled</string>

</resources>