<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add_card.AddCardActivity">

    <TextView
        android:id="@+id/addCardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/add_card_title"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="389dp"
        android:layout_height="220dp"
        android:layout_marginTop="31dp"
        app:cardBackgroundColor="@color/card_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCardTitle">

        <EditText
            android:id="@+id/addCardDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center|start|top"
            android:hint="@string/card_question"
            android:importantForAutofill="no"
            android:inputType="textMultiLine" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/addCardQuestionButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="39dp"
        android:background="@color/colorAccent"
        android:onClick="switchToQuestion"
        android:text="@string/button_question"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/addCardAnswerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/addCardAnswerButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="36dp"
        android:background="@color/button_dull"
        android:onClick="switchToAnswer"
        android:text="@string/button_answer"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addCardQuestionButton"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/addCardSubmitButton"
        android:layout_width="389dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="118dp"
        android:layout_marginBottom="26dp"
        android:background="@color/colorPrimary"
        android:onClick="submitCard"
        android:text="@string/add_card_btn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCardQuestionButton" />

</androidx.constraintlayout.widget.ConstraintLayout>